--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,20 @@
 <%= form_for(tasks) do |f| %>
+
+  <% if tasks.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(tasks.errors.count, "error") %> prohibited this message from being saved:</h2>
+
+      <ul>
+        <% tasks.errors.full_messages.each do |tasks| %>
+          <li><%= tasks %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
+
 <% end %>
