--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,6 +12,9 @@
     </div>
   <% end %>
 
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
 
