kadai bootstrap design

--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,3 +1,3 @@
 <% flash.each do |tasks_type, tasks| %>
-  <div><%= tasks %></div>
+  <div class="alert alert-<%= tasks_type %>"><%= tasks %></div>
 <% end %>
