--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <title>Tasklist</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <!-- bootstrap用 ↓-->
+    <title>MessageBoard</title>
+    <%= csrf_meta_tags %>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- bootstrap用 ↑-->
+    
   </head>
 
+
   <body>
+    
+    <%= render 'layouts/navbar' %>
+    
     <div class="container">
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
     </div>
+    
   </body>
 </html>
