--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,16 @@
+
+<div class="col-xs-12">
+<div class="col-sm-offset-2 col-sm-8">
+<div class="col-lg-offset-3 col-lg-3">
+
+<div class="row">
+  
+
+
 <%= form_for(tasks) do |f| %>
 
   <% if tasks.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-warning">
       <h2><%= pluralize(tasks.errors.count, "error") %> prohibited this message from being saved:</h2>
 
       <ul>
@@ -12,12 +21,25 @@
     </div>
   <% end %>
 
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
+  <div class="form-group">
+    <%= f.label :status, 'ステータス' %>
+    <%= f.text_field :status %>
+  </div>
 
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
+  <div class="form-group">
+    <%= f.label :content, 'タスク' %>
+    <%= f.text_field :content %>
+  </div>
 
   <%= f.submit '投稿' %>
 
 <% end %>
+
+
+
+</div>
+
+</div>
+</div>
+</div>
+
