--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   
-<div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-3 col-xs-12 ">
+<div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 
 
 <%= form_for(tasks) do |f| %>
