--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-  <!-- ナビバーここから -->  
+<!-- ナビバーここから -->  
 <nav class="navbar navbar-default">
   <div class="container-fluid">
   <div class="navbar-header">
@@ -10,19 +10,36 @@
     </button>
 
     <!-- ホームへ戻るリンク。ブランドロゴなどを置く。 -->
-    <a class="navbar-brand" href="#">タスク</a>
+    <a class="navbar-brand" href="#">xxxx</a>
   </div>
 
   <!-- メニュー項目 -->
   <div id="navbar" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav navbar-right">
     <li class="active"><a href="/">一覧</a></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">投稿<span class="caret"></span></a>
       <ul class="dropdown-menu">
-      <li><a href="/tasks/new">新規</a></li>
+      <li><a href="/tasks/new">新規タスク投稿</a></li>
       </ul>
     </li>
+    
+    <% if logged_in? %>
+       <li><%= link_to 'Users', users_path %></li>
+         <li class="dropdown">
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+             <ul class="dropdown-menu">
+              <li><%= link_to 'My profile', user_path(current_user) %></li>
+              <li role="separator" class="divider"></li>
+              <li>Logout</li>
+             </ul>
+       </li>
+    <% else %>
+       <li><%= link_to 'Signup', signup_path %></li>
+       <li><%= link_to 'Login', login_path %></li>
+       <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+    <% end %> 
+
     </ul>
   </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
