--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,7 +12,7 @@
     <tbody>
       <% @tasks.each do |tasks| %>
         <tr>
-          <td><%= link_to tasks.id, tasks %></td>
+          <td><%= tasks.id %></td>
           <td><%= tasks.status %></td>
           <td><%= tasks.content %></td>
         </tr>
